Update html and launched ui test
give different parts in html a id and class, launched a brand-NEW UI test by JavaFX, BTW i add a new simple script that fixes Error: JavaFX runtime components are missing on build.gradle and its down below
tasks.withType(JavaExec).configureEach {
    doFirst {
        jvmArgs += ['--module-path', classpath.asPath, '--add-modules', 'javafx.controls,javafx.fxml']
    }
}