@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
 group = 'org.vren'
@@ -9,9 +10,23 @@ repositories {
     mavenCentral()
 }
 
+
 dependencies {
+    implementation 'org.openjfx:javafx-controls:21'
+    implementation 'org.openjfx:javafx-fxml:21'
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+}
+
+javafx {
+   version = "21"
+   modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
+
+tasks.withType(JavaExec).configureEach {
+    doFirst {
+        jvmArgs += ['--module-path', classpath.asPath, '--add-modules', 'javafx.controls,javafx.fxml']
+    }
 }
 
 test {
